message passing from HTML page to background
need to change some things around t=so that the content script can
actually call a redirect but for now the communication between web
pages and the extension is working fine.

--- a/server/public/views/wikirace.html
+++ b/server/public/views/wikirace.html
@@ -87,7 +87,19 @@
 			    	
 			    </div>
 			</section>
-		    
+		    <script>
+				var go = function() {
+				    console.log("button");
+				    var extensionID = "dookpljdhbelnhekoanbkgahcioialmn";
+
+					// Make a simple request:
+					chrome.runtime.sendMessage(extensionID, {action: "startGame"},
+					  function(response) {
+					      console.log(response.farewell);
+  					});
+				}
+			</script>
+<a href="javascript:go();">Click me</a>
 		</main>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
