changed date format

--- a/server/public/views/wikirace.html
+++ b/server/public/views/wikirace.html
@@ -88,24 +88,24 @@
 			    </div>
 			</section>
 		    <script>
-		    	$('#submit-button').onclick(function() {
-		    		var name = $('#name-input').val();
-		    		var data = {
-		    			name: name
-		    		};
+		    // 	$('#submit-button').onclick(function() {
+		    // 		var name = $('#name-input').val();
+		    // 		var data = {
+		    // 			name: name
+		    // 		};
 
-	    			$.ajax({
-					    type: "POST",
-						url: '//localhost:3000',
-					    data: data,
-					    success: function() {
-					      console.log('post success');
-					    },
-					    error: function() {
-					      console.log("post error")
-						}
-				  	});
-		    	});
+	    	// 		$.ajax({
+					 //    type: "POST",
+						// url: '//localhost:3000',
+					 //    data: data,
+					 //    success: function() {
+					 //      console.log('post success');
+					 //    },
+					 //    error: function() {
+					 //      console.log("post error")
+						// }
+				  // 	});
+		    // 	});
 
 		    	
 				var go = function() {
