--- a/server/public/views/wikirace.html
+++ b/server/public/views/wikirace.html
@@ -31,21 +31,33 @@
 				font-family: 'Open Sans', sans-serif;
 			}
 		</style>
+
+    <!-- Google Analytics -->
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-67980008-1', 'auto');
+    ga('send', 'pageview');
+    </script>
+    <!-- End Google Analytics -->
     </head>
     <body class="loading">
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
-       	
+
        	<!-- <div id="preload"> -->
 	       	<!-- <img src="img/bcg_slide-1.jpg"> -->
 	       	<!-- <img src="img/bcg_slide-2.jpg"> -->
 	       	<!-- <img src="img/bcg_slide-3.jpg"> -->
 	       	<!-- <img src="img/bcg_slide-4.jpg"> -->
        	<!-- </div> -->
-       	
+
        	<main>
-       	 
+
 	        <section id="slide-1" class="homeSlide">
 	        	<div class="bcg">
 		        	<div class="hsContainer">
@@ -55,7 +67,7 @@
 		        	</div>
 	        	</div>
 		    </section>
-		    
+
 		    <section id="slide-2" class="homeSlide">
 		    	<div class="bcg">
 			    	<div class="hsContainer">
@@ -65,7 +77,7 @@
 		        	</div>
 		    	</div>
 		    </section>
-		    
+
 			<section id="slide-3" class="homeSlide">
 				<div class="bcg">
 			    	<div class="hsContainer">
@@ -73,10 +85,10 @@
 				    		<h2>Now go and create your own story</h2>
 			    		</div>
 			    	</div>
-			    	
+
 			    </div>
 			</section>
-			
+
 			<section id="slide-4" class="homeSlide">
 				<div class="bcg">
 			    	<div class="hsContainer">
@@ -84,7 +96,7 @@
 				    		<h2>and share mine.</h2>
 			    		</div>
 			    	</div>
-			    	
+
 			    </div>
 			</section>
 		    <script>
@@ -94,7 +106,7 @@
 
 				    startURL = "https://en.wikipedia.org/wiki/New_Zealand";
    					console.log(startURL);
-					location.replace(startURL);	
+					location.replace(startURL);
 
 					// Make the request
 					chrome.runtime.sendMessage(extensionID, {action: "startGame"},
