--- a/server/public/views/wikirace.html
+++ b/server/public/views/wikirace.html
@@ -25,12 +25,16 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.7.1.min.js"></script>
+       
         <style type="text/css">
 			body {
 				font-family: 'Open Sans', sans-serif;
 			}
 		</style>
+
+		<script src="js/vendor/jquery-1.9.1.min.js"></script>
+		<script src="js/vendor/modernizr-2.7.1.min.js"></script>
+
     </head>
     <body class="loading">
         <!--[if lt IE 7]>
@@ -88,46 +92,43 @@
 			    </div>
 			</section>
 		    <script>
-		    // 	$('#submit-button').onclick(function() {
-		    // 		var name = $('#name-input').val();
-		    // 		var data = {
-		    // 			name: name
-		    // 		};
+		    $(document).ready(function(){
+		    	$('#submit-button').click(function() {
+		    		var name = $('#name-input').val();
+		    		var data = {
+		    			name: name
+		    		};
 
-	    	// 		$.ajax({
-					 //    type: "POST",
-						// url: '//localhost:3000',
-					 //    data: data,
-					 //    success: function() {
-					 //      console.log('post success');
-					 //    },
-					 //    error: function() {
-					 //      console.log("post error")
-						// }
-				  // 	});
-		    // 	});
+	    			$.ajax({
+					    type: "POST",
+						url: '//localhost:3000',
+					    data: data,
+					    success: function() {
+					     	console.log('post success');
+					      	var extensionID = "dookpljdhbelnhekoanbkgahcioialmn";
 
-		    	
-				var go = function() {
-				    console.log("button");
-				    var extensionID = "dookpljdhbelnhekoanbkgahcioialmn";
+						    startURL = "https://en.wikipedia.org/wiki/New_Zealand";
+							location.replace(startURL);	
 
-				    startURL = "https://en.wikipedia.org/wiki/New_Zealand";
-   					console.log(startURL);
-					location.replace(startURL);	
+							// Make the request
+							chrome.runtime.sendMessage(extensionID, {action: "startGame"},
+							  function(response) {
+							      console.log(response.farewell);
+		  					});
+					    },
+					    error: function() {
+					      console.log("post error")
+						}
+				  	});
+		    	});
+		    });
 
-					// Make the request
-					chrome.runtime.sendMessage(extensionID, {action: "startGame"},
-					  function(response) {
-					      console.log(response.farewell);
-  					});
-				}
 			</script>
-<a href="javascript:go();">Click me</a>
+
+		<button id="submit-button">Clicky.</button>>
 		</main>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
+
         <script src="js/imagesloaded.js"></script>
         <script src="js/skrollr.js"></script>
         <script src="js/_main.js"></script>
