send status properly

--- a/server/public/views/wikirace.html
+++ b/server/public/views/wikirace.html
@@ -69,7 +69,7 @@
 			    	<div class="hsContainer">
 			    		<div class="hsContent box2">
 				    		<article><a href="#">Get the Google Chrome Extension</a></article><!-- link to google chrome extension -->
-			    		
+
 			    		</div>
 		        	</div>
 		        	</div>
@@ -114,14 +114,14 @@
    										 <br>
     						<div class="formelement">
    							 <input type="text" id="kartName">
-   					
+
    							 </div>
    							 <br>
    							 <!-- <input type="submit" value="submit" id="submit-button" class="submitButton"> -->
 							</form>
 			    		</div>
 			    	</div>
-			    	
+
 			    </div>
 			</section>
 		    		</main>
@@ -140,7 +140,7 @@
 		<script>
           $(document).ready(function(){
             $('#submit-button').click(function() {
-              var name = $('#name-input').val();
+              var name = $('#kartName').val();
               var data = {
                 name: name
               };
@@ -179,7 +179,7 @@
 				    		<button class="box" id="submit-button">Click me</button>
 			    		</div>
 			    	</div>
-			    	
+
 			    </div>
 			</section>
 
