--- a/server/public/views/wikirace.html
+++ b/server/public/views/wikirace.html
@@ -67,13 +67,13 @@
 	        <section id="slide-1" class="homeSlide">
 	        	<div class="bcg" >
 			    	<div class="hsContainer">
-			    		<div class="hsContent box2">
+			    		<div class="hsContent extensionlink">
 				    		<article><a href="#">Get the Google Chrome Extension</a></article><!-- link to google chrome extension -->
 
 			    		</div>
 		        	</div>
 		        	</div>
-		        	</div>
+		        	<!-- </div> -->
 	        	</div>
 		    </section>
 
@@ -104,34 +104,12 @@
 			    </div>
 			</section>
 
-			<section id="slide-4" class="homeSlide">
-				<div class="bcg">
-			    	<div class="hsContainer">
-		    			<div class="hsContent box2">
-				    		<h2>Enter Your Name</h2>
-				    		<form>
-   								 <label for=“name”>Name your Kart</label>
-   										 <br>
-    						<div class="formelement">
-   							 <input type="text" id="kartName">
 
-   							 </div>
-   							 <br>
-   							 <!-- <input type="submit" value="submit" id="submit-button" class="submitButton"> -->
-							</form>
-			    		</div>
-			    	</div>
-
-			    </div>
-			</section>
-		    		</main>
 
 		<section id="slide-5" class="homeSlide">
 			<div class="bcg">
 		    	<div class="hsContainer">
-	    			<div class="hsContent">
-			    		<!-- TEXT GOES HERE -->
-		    		</div>
+	    			
 		    	</div>
 
 		    </div>
@@ -177,12 +155,29 @@
 		<section id="slide-6" class="homeSlide">
 				<div class="bcg">
 			    	<div class="hsContainer">
-		    			<div class="hsContent">
-				    		<button class="box" id="submit-button">Click me</button>
+			    	<div class="hsContent box2">
+				    		<h2>Enter Your Name</h2>
+				    		<form>
+   								 <label for=“name”>Name your Kart</label>
+   										 <br>
+    						<div class="formelement">
+   							 <input type="text" id="kartName">
+   							 </div>
+   								 <br>
+   							 <div class="">
+				    				<button id="submit-button">Click me</button> 
+
+			    			
+			    			</div>
+							<button>hello</button>
+							</form>
+							<div class="hsContainer">
+		    					
+			    			</div>
+			    	</div>
 			    		</div>
 			    	</div>
 
-			    </div>
 			</section>
 
         <script src="js/imagesloaded.js"></script>
