wrap up of all requests

--- a/server/public/views/highscore.handlebars
+++ b/server/public/views/highscore.handlebars
@@ -16,7 +16,7 @@
 	<h1>You did it!</h1>
 			<br>
 			<br>
-	<p>Your time was</p>
+	<p>Your time was: {{{time }}}</p>
 	</div>
   <div class="cloud x1"></div>
   <div class="cloud x2"></div>
