--- a/server/public/views/wikirace.html
+++ b/server/public/views/wikirace.html
@@ -109,7 +109,7 @@
 		<section id="slide-5" class="homeSlide">
 			<div class="bcg">
 		    	<div class="hsContainer">
-	    			
+
 		    	</div>
 
 		    </div>
@@ -127,23 +127,25 @@
                 type: "POST",
                 url: '/api/user',
                 data: data,
-                success: function() {
+                success: function(dataResponse) {
+                  // probably need this to parse the json from server
+                  dataResponse = JSON.parse(dataResponse);
                   console.log('post success');
                   var extensionID = "dookpljdhbelnhekoanbkgahcioialmn";
 
-                  startURL = "https://en.wikipedia.org/wiki/New_Zealand";
-                  location.replace(startURL);
+                  location.replace(dataResponse.startUrl);
 
-                  chrome.runtime.sendMessage(extensionID, {saveContent: data},
-                  function(response) {
-                    console.log(response.farewell);
+                  chrome.runtime.sendMessage(extensionID, {saveContent: dataResponse},
+                    function(response) {
+                      console.log(response.farewell);
                   });
 
+                  // probably dont need because of above message ^
                   // Make the request
-                  chrome.runtime.sendMessage(extensionID, {action: "startGame"},
-                  function(response) {
-                    console.log(response.farewell);
-                  });
+                  // chrome.runtime.sendMessage(extensionID, {action: "startGame"},
+                  //   function(response) {
+                  //     console.log(response.farewell);
+                  // });
                 },
                 error: function() {
                   alert("Please enter a name for your Kart!");
@@ -169,14 +171,14 @@
    							 </div>
    								 <br>
    							 <div class="">
-				    				<button id="submit-button">Click me</button> 
+				    				<button id="submit-button">Click me</button>
 
-			    			
+
 			    			</div>
 							<button>hello</button>
 							</form>
 							<div class="hsContainer">
-		    					
+
 			    			</div>
 			    	</div>
 			    		</div>
