--- a/server/public/views/wikirace.html
+++ b/server/public/views/wikirace.html
@@ -133,20 +133,11 @@
     						<div class="formelement">
    							 <input type="text" id="kartName" class="pleasecenter">
    							 </div>
-<<<<<<< Updated upstream
-   								 <br>
-   							 <div class="">
-				    				<button id="submit-button">Click me</button>
-
-
-			    			</div>
-							<button>hello</button>
-							</form>
-=======
+   							 <h3 style="text-align:center; margin-top: 35px;">Choose Your Course </h3>
    							 <div class="flex">
-   							 <button id="submit-button"><img src="img/donald.png" width="100px"></button>
-							 <button id="submit-button"><img src="img/platy.png" width="100px"></button>
-							 <button id="submit-button"><img src="img/random.png" width="100px"></button>
+   							 <button id="submit-button"><img src="img/donald.png" width="150px"></button>
+							 <button id="submit-button"><img src="img/platy.png" width="150px"></button>
+							 <button id="submit-button"><img src="img/random.png" width="150px"></button>
    							 </div>
 
    							</form>
@@ -159,7 +150,6 @@
 							
 							
 							</div>
->>>>>>> Stashed changes
 							<div class="hsContainer">
 
 			    			</div>
