--- a/server/public/views/highscore.handlebars
+++ b/server/public/views/highscore.handlebars
@@ -7,17 +7,16 @@
 	<link href='https://fonts.googleapis.com/css?family=Josefin+Sans:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
-<section class="front">
 
-</section>
+<div class="centerme congrats front">
+	<h1>You did it!</h1>
+	<br>
+	<br>
+	<p>Your time was: {{{time }}}</p>
+</div>
 
 <div id="clouds">
-	<div class="centerme congrats">
-	<h1>You did it!</h1>
-			<br>
-			<br>
-	<p>Your time was: {{{time }}}</p>
-	</div>
+
   <div class="cloud x1"></div>
   <div class="cloud x2"></div>
   <div class="cloud x3"></div>
@@ -36,6 +35,5 @@
   </div>
 </div>
 
-</section>
 </body>
 </html>
