--- a/server/public/views/wikirace.html
+++ b/server/public/views/wikirace.html
@@ -3,208 +3,179 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>WIKIO-KART</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>WIKIO-KART</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
 
-		<link rel="author" href="https://plus.google.com/u/0/109859280204979591787/about"/>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300|Paytone+One|Josefin+Sans' rel='stylesheet' type='text/css'>
 
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+  <script src="js/vendor/jquery-1.9.1.min.js"></script>
+  <script src="js/vendor/modernizr-2.7.1.min.js"></script>
 
-		<!--
-			* This demo was prepared for you by Petr Tichy - Ihatetomatoes.net
-			* Want to see more similar demos and tutorials?
-			* Help by spreading the word about Ihatetomatoes blog.
-			* Facebook - https://www.facebook.com/ihatetomatoesblog
-			* Twitter - https://twitter.com/ihatetomatoes
-			* Google+ - https://plus.google.com/u/0/109859280204979591787/about
-		-->
+  <!-- Google Analytics -->
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
+  ga('create', 'UA-67980008-1', 'auto');
+  ga('send', 'pageview');
+  </script>
+  <!-- End Google Analytics -->
+</head>
+<body class="loading">
+<!--[if lt IE 7]>
+  <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
+<![endif]-->
 
-        <style type="text/css">
-			body {
-				font-family: 'Open Sans', sans-serif;
-			}
-		</style>
+<!-- <div id="preload"> -->
+  <!-- <img src="img/bcg_slide-1.jpg"> -->
+  <!-- <img src="img/bcg_slide-2.jpg"> -->
+  <!-- <img src="img/bcg_slide-3.jpg"> -->
+  <!-- <img src="img/bcg_slide-4.jpg"> -->
+<!-- </div> -->
 
-		<script src="js/vendor/jquery-1.9.1.min.js"></script>
-		<script src="js/vendor/modernizr-2.7.1.min.js"></script>
+<main>
+  <section id="slide-1" class="homeSlide">
+    <div class="bcg" >
+      <div class="hsContainer">
+        <div class="extensionlink">
+          <article><a href="#">Download the Chrome Extension to Play</a></article><!-- link to google chrome extension -->
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <img src="img/mouse.png" class="mousecar" width="100px">
 
-	    <!-- Google Analytics -->
-	    <script>
-	    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  <section id="slide-2" class="homeSlide">
+    <div class="bcg" >
+      <div class="hsContainer">
+        <div class="hsContent box2">
+          <h2>How to Play</h2>
+          <p>Start at one random Wikipedia page, <br>
+          and click your way to the other using <br>
+          links on the page. Move as fast as you can- <br>
+          <i>we're timing you!</i> </p>
+        </div>
+      </div>
+    </div>
+  </section>
 
-	    ga('create', 'UA-67980008-1', 'auto');
-	    ga('send', 'pageview');
-	    </script>
-	    <!-- End Google Analytics -->
-
-		<link href='https://fonts.googleapis.com/css?family=Open+Sans:300|Paytone+One|Josefin+Sans' rel='stylesheet' type='text/css'>
-    </head>
-    <body class="loading">
-        <!--[if lt IE 7]>
-            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
-        <![endif]-->
-
-       	<!-- <div id="preload"> -->
-	       	<!-- <img src="img/bcg_slide-1.jpg"> -->
-	       	<!-- <img src="img/bcg_slide-2.jpg"> -->
-	       	<!-- <img src="img/bcg_slide-3.jpg"> -->
-	       	<!-- <img src="img/bcg_slide-4.jpg"> -->
-       	<!-- </div> -->
-
-
-	
-       	<main>
-
-	        <section id="slide-1" class="homeSlide">
-	        	<div class="bcg" >
-			    	<div class="hsContainer">
-			    		<div class="extensionlink">
-				    		<article><a href="#">Download the Chrome Extension to Play</a></article><!-- link to google chrome extension -->
-
-			    		</div>
-		        	</div>
-		        	</div>
-		        	<!-- </div> -->
-
-		    </section>
-
-		   <img src="img/mouse.png" class="mousecar" width="100px">
-
-		    <section id="slide-2" class="homeSlide">
-		    	<div class="bcg" >
-			    	<div class="hsContainer">
-			    		<div class="hsContent box2">
-				    		<h2>How to Play</h2>
-				    		<p>Start at one random Wikipedia page, <br>
-				    		and click your way to the other using <br>
-				    		links on the page. Move as fast as you can- <br>
-				    		<i>we're timing you!</i> </p>
-			    		</div>
-		        	</div>
-		    	</div>
-		    </section>
-
-			<section id="slide-3" class="homeSlide">
-				<div class="bcg">
-			    	<div class="hsContainer">
-		    			<div class="hsContent">
-				    		<!-- TEXT GOES HERE -->
-			    		</div>
-			    	</div>
-
-			    </div>
-			</section>
+  <section id="slide-3" class="homeSlide">
+    <div class="bcg">
+      <div class="hsContainer">
+        <div class="hsContent">
+        <!-- TEXT GOES HERE -->
+        </div>
+      </div>
+    </div>
+  </section>
 
 
 
-		<section id="slide-5" class="homeSlide">
-			<div class="bcg">
-		    	<div class="hsContainer">
+  <section id="slide-5" class="homeSlide">
+    <div class="bcg">
+      <div class="hsContainer">
+      </div>
+    </div>
+  </section>
+</main>
 
-		    	</div>
-
-		    </div>
-		</section>
-
-		</main>
-
-		<section id="slide-6" class="homeSlide">
-				<div class="bcg">
-<!-- <div style="  -->
-	<!-- margin:0 auto;
+<section id="slide-6" class="homeSlide">
+  <div class="bcg">
+    <!-- <div style="  -->
+    <!-- margin:0 auto;
     top:100px;
-    position: relative;"> -->				
-			    	<div id="slide-6" class="hsContent" style="padding-top:50px; padding-right:55px">
-			    	<div class= "">
-				    		<h2 style="text-align:center;">Ready, set.. </h2>
-				    		<form>
-   								 <label for=“name” class="pleasecenter">Name your Kart</label>
-    						<div class="formelement">
-   							 <input type="text" id="kartName" class="pleasecenter">
-   							 </div>
-   							 <h3 style="text-align:center; margin-top: 35px;">Choose Your Course </h3>
-   							 <div class="flex">
-   							 <button id="submit-button"><img src="img/donald.png" width="150px"></button>
-							 <button id="submit-button"><img src="img/platy.png" width="150px"></button>
-							 <button id="submit-button"><img src="img/random.png" width="150px"></button>
-   							 </div>
+    position: relative;"> -->
+    <div id="slide-6" class="hsContent" style="padding-top:50px; padding-right:55px">
+      <div class= "">
+        <h2 style="text-align:center;">Ready, set.. </h2>
+        <form>
+          <label for=“name” class="pleasecenter">Name your Kart</label>
+          <div class="formelement">
+            <input type="text" id="kartName" class="pleasecenter">
+          </div>
 
-   							</form>
-   							 <!-- <div class=""> -->
-				    				<!-- <button id="submit-button">Click me</button>  -->
-
-			    			
-			    			<!-- <o/div> -->
-	
-							
-							
-							</div>
-							<div class="hsContainer">
-
-			    			</div>
-			    	</div>
-</div>			    	
-			    		
-			    	
-
-			</section>
+          <h3 style="text-align:center; margin-top: 35px;">Choose Your Course </h3>
+          <div class="flex">
+            <button id="submit-button-donald"><img src="img/donald.png" width="150px"></button>
+            <button id="submit-button-platy"><img src="img/platy.png" width="150px"></button>
+            <button id="submit-button-random"><img src="img/random.png" width="150px"></button>
+          </div>
+        </form>
+        <!-- <div class=""> -->
+        <!-- <button id="submit-button">Click me</button>  -->
 
 
-      <script>
-            $(document).ready(function(){
-              $('#submit-button').click(function() {
-                var name = $('#kartName').val();
-                var data = {
-                  name: name
-                };
+        <!-- <o/div> -->
+      </div>
 
-                $.ajax({
-                  type: "POST",
-                  url: '/api/user',
-                  data: data,
-                  success: function(dataResponse) {
-                    // probably need this to parse the json from server
-                    dataResponse = JSON.parse(dataResponse);
-                    console.log('post success');
-                    var extensionID = "dfmgjlfnhflocfegladlodgonfgeclof";
+      <div class="hsContainer"></div>
 
-                    location.replace(dataResponse.startUrl);
+    </div>
+  </div>
+</section>
 
-                    chrome.runtime.sendMessage(extensionID, {saveContent: dataResponse},
-                      function(response) {
-                        console.log(response.farewell);
-                    });
 
-                    // probably dont need because of above message ^
-                    // Make the request
-                    // chrome.runtime.sendMessage(extensionID, {action: "startGame"},
-                    //   function(response) {
-                    //     console.log(response.farewell);
-                    // });
-                  },
-                  error: function() {
-                    alert("Please enter a name for your Kart!");
-                  }
-                });
-              });
-            });
+<script>
+  $(document).ready(function(){
+    $('#submit-button-donald').click(function() { sendData(); });
+    $('#submit-button-platy').click(function() { sendData(); });
+    $('#submit-button-random').click(function() { sendData(); });
 
-  		</script>
+    var sendData = function() {
+      var n = $('#kartName').val();
+      var settings = {
+        method: "POST",
+        url: '/api/user',
+        data: {
+          name: n
+        },
+        async: true,
+        headers: {
+          'content-type': "application/json",
+        },
+        processData: false
+      };
 
-        <script src="js/imagesloaded.js"></script>
-        <script src="js/skrollr.js"></script>
-        <script src="js/_main.js"></script>
+      $.ajax(settings).done(function(dataResponse) {
+        console.log(dataResponse);
+        // probably need this to parse the json from server
+        // dataResponse = JSON.parse(dataResponse);
+        // console.log('post success');
+        // var extensionID = "dfmgjlfnhflocfegladlodgonfgeclof";
+        //
+        // location.replace(dataResponse.startUrl);
+        //
+        // chrome.runtime.sendMessage(extensionID, {saveContent: dataResponse}, function(response) {
+        //   console.log(response.farewell);
+        // });
 
-    </body>
+        // probably dont need because of above message ^
+        // Make the request
+        // chrome.runtime.sendMessage(extensionID, {action: "startGame"},
+        //   function(response) {
+        //     console.log(response.farewell);
+        // });
+      });
+      //   error: function() {
+      //     alert("Please enter a name for your Kart!");
+      //   }
+      // });
+    }
+  });
+</script>
+
+<script src="js/imagesloaded.js"></script>
+<script src="js/skrollr.js"></script>
+<script src="js/_main.js"></script>
+
+</body>
 </html>
